removed the unnecery role in the authfilter